<resources>
    <string name="app_name">MyChatChit</string>
    <string name="register">Đăng ký</string>
    <string name="first_name">Họ</string>
    <string name="last_name">Tên</string>
    <string name="phone">SĐT</string>
    <string name="birthday">Ngày sinh</string>
    <string name="gender">Giới tính</string>
    <string name="status">Tình trạng quan hệ</string>
    <string name="job">Nghề nghiệp</string>
    <string name="home">Chỗ ở</string>
    <string name="bio">Giới thiệu bản thân</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="about_me">About me</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="setting">Setting</string>
    <string name="personal_profile">Thông tin cá nhân</string>
    <string name="save_info">Lưu thông tin</string>
    <string name="tab_chat">Chat</string>
    <string name="tab_people">People</string>
    <string name="tab_explore">Explore</string>
    <string name="message">Message</string>
    <string name="time">Time</string>
    <string name="search">Search</string>
    <string name="history_search">Lịch sử tìm kiếm</string>
    <string name="list_people">Danh sách người dùng</string>
</resources>