<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OthersProfileActivity"
    android:background="@color/second_background">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_marginTop="@dimen/_50sdp"
        android:id="@+id/layout_1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:orientation="vertical">
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_below="@id/layout_1"
        android:id="@+id/scrollview"
        android:layout_alignParentBottom="true"
        android:background="@drawable/background_half_rect"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_2"
        android:padding="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_alignTop="@+id/layout_1"
        android:background="@drawable/background_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.makeramen.roundedimageview.RoundedImageView

            app:riv_corner_radius="@dimen/_200sdp"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:id="@+id/img_avatar"
            android:src="@drawable/cap"
            android:scaleType="centerCrop"/>
    </LinearLayout>
    <LinearLayout
        android:layout_alignTop="@+id/scrollview"
        android:layout_toRightOf="@id/layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/layout_2"
        android:orientation="horizontal">
        <ImageView
            android:layout_margin="@dimen/_5sdp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_info"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_profile"
            android:gravity="center_horizontal"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/primary_text"
            android:layout_margin="@dimen/_5sdp" />

    </LinearLayout>
    <ScrollView
        android:layout_below="@id/layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_margin="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">
                <ImageView
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_person"/>
                <EditText
                    android:enabled="false"
                    android:background="@null"
                    android:singleLine="true"
                    android:padding="@dimen/_8sdp"
                    android:id="@+id/edt_first_name"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/first_name"
                    android:textColor="@color/secondary_text"
                    android:layout_marginEnd="@dimen/_5sdp" />
                <EditText
                    android:enabled="false"
                    android:background="@null"
                    android:id="@+id/edt_last_name"
                    android:padding="@dimen/_8sdp"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/last_name"
                    android:textColor="@color/secondary_text"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp" />
            </LinearLayout>
            <LinearLayout
                android:layout_margin="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_phone"/>
                <EditText
                    android:enabled="false"
                    android:background="@null"
                    android:singleLine="true"
                    android:padding="@dimen/_8sdp"
                    android:id="@+id/edt_phone"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:textColor="@color/secondary_text"
                    android:layout_marginEnd="@dimen/_5sdp" />
            </LinearLayout>
            <LinearLayout
                android:layout_margin="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_birthday"/>
                <EditText
                    android:enabled="false"
                    android:background="@null"
                    android:singleLine="true"
                    android:padding="@dimen/_8sdp"
                    android:id="@+id/edt_birthday"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/birthday"
                    android:textColor="@color/secondary_text"
                    android:layout_marginEnd="@dimen/_5sdp" />
            </LinearLayout>
            <LinearLayout
                android:layout_margin="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/ic_gender"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_female"/>
                <EditText
                    android:enabled="false"
                    android:background="@null"
                    android:singleLine="true"
                    android:padding="@dimen/_8sdp"
                    android:id="@+id/edt_gender"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/gender"
                    android:textColor="@color/secondary_text"
                    android:layout_marginEnd="@dimen/_5sdp" />
            </LinearLayout>
            <LinearLayout
                android:layout_margin="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_status"/>
                <EditText
                    android:enabled="false"
                    android:background="@null"
                    android:singleLine="true"
                    android:padding="@dimen/_8sdp"
                    android:id="@+id/edt_status"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/status"
                    android:textColor="@color/secondary_text"
                    android:layout_marginEnd="@dimen/_5sdp" />
            </LinearLayout>
            <LinearLayout
                android:layout_margin="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_job"/>
                <EditText
                    android:enabled="false"
                    android:background="@null"
                    android:singleLine="true"
                    android:padding="@dimen/_8sdp"
                    android:id="@+id/edt_job"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/job"
                    android:textColor="@color/secondary_text"
                    android:layout_marginEnd="@dimen/_5sdp" />
            </LinearLayout>
            <LinearLayout
                android:layout_margin="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_home"/>
                <EditText
                    android:enabled="false"
                    android:background="@null"
                    android:id="@+id/edt_home"
                    android:padding="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/home"
                    android:textColor="@color/secondary_text"
                    android:layout_marginEnd="@dimen/_5sdp" />
            </LinearLayout>
            <LinearLayout
                android:layout_margin="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_bio"/>
                <EditText
                    android:enabled="false"
                    android:id="@+id/edt_bio"
                    android:padding="@dimen/_8sdp"
                    android:background="@null"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bio"
                    android:textColor="@color/secondary_text"
                    android:layout_marginEnd="@dimen/_5sdp" />
            </LinearLayout>


            <Button
                android:id="@+id/btn_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tab_chat"
                android:background="@drawable/background_input"
                android:layout_margin="@dimen/_10sdp"
                android:textColor="@color/primary_text"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>